# humidor

./: .dockerignore  .env  .env.example  .gitignore  .typos.toml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_PROGRESS.md  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES_v1.0.0-rc.1.md  RELEASE_NOTES_v1.0.0.md  SECURITY_UPDATES.md  audit.toml  build-errors.txt  docker-compose.dev.yml  docker-compose.yml  rustfmt.toml  test_results.txt  test_wish_list_debug.rs
.cargo/: config.toml
.claude/: settings.json
.github/: IGNORE_FALSE_ALERTS.md  copilot-instructions.md  labeler.yml
.github/workflows/: README.md  ci.yml  deploy.yml  gitlab-mirror.yml  pr-checks.yml  scheduled.yml
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: ADMIN_GUIDE.md  ANALYSIS_ARCH.md  ANALYSIS_BUGS.md  ANALYSIS_FEATURES.md  API.md  CIGAR_RECOMMENDATION_FEATURE.md  CODE_REVIEW_PROGRESS.md  CORS_CONFIGURATION.md  DEPENDENCY_UPDATES_PLAN.md  DOCKER_OPTIMIZATION.md  DOCKER_SECRETS.md  FEATURES_TODO.md  ISSUE_3.1_COMPLETED.md  MASTER_PLAN.md  MIGRATIONS.md  MOBILE_UI_OVERHAUL.md  OWNERSHIP_TRANSFER.md  PAGINATION_IMPLEMENTATION.md  PASSWORD_MANAGER_QUICK_REFERENCE.md  PASSWORD_MANAGER_SUPPORT.md  PASSWORD_RESET_README.md  PASSWORD_RESET_TESTING.md  PERMISSIONS.md  PUBLIC_SHARING_IMPLEMENTATION_OPTIONS.md  PWA_IMPLEMENTATION.md  PWA_TESTING_GUIDE.md  QUERY_OPTIMIZATION.md  README.md  RECOMMEND_FEATURE_RELEASE_NOTES.md  SCRAPER_DOCUMENTATION.md  SECURITY_AUDIT_2025-01-11.md  SECURITY_MODEL.md  SECURITY_UPDATES.md  SHARING.md  USER_GUIDE.md
migrations/: 20241020000001_create_cigars_table.sql  20241020000002_create_organizers_tables.sql  20241021000001_create_users_and_humidors_tables.sql  20241224000001_add_image_url_to_cigars.sql  20241230000001_convert_organizers_to_foreign_keys.sql  20250111000001_create_humidor_shares.sql  V10__add_retail_link_to_cigars.sql  V11__add_foreign_key_indexes.sql  V13__add_user_id_to_organizers.sql  V14__add_image_url_to_humidors.sql  V15__create_public_humidor_shares.sql  V16__add_public_share_options.sql  V17__allow_multiple_public_shares.sql  V1__create_users_table.sql  V2__create_humidors_table.sql  V3__create_organizer_tables.sql  V4__seed_organizer_data.sql  V5__create_cigars_table.sql  V6__create_favorites_table.sql  V7__add_composite_indexes.sql  V8__create_wish_list_table.sql  V9__create_password_reset_tokens_table.sql
release_notes/: v1.1.0.md  v1.2.0.md  v1.2.1.md  v1.3.0.md  v1.3.1.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.5.0.md  v1.5.1.md  v1.5.2.md  v1.5.3.md
secrets/: README.md  db_user.txt.example  jwt_secret.txt.example
src/: errors.rs  lib.rs  main.rs  main.rs.backup  validation.rs
src/handlers/: auth.rs  (+14 more)
static/: app.js  clear-sw-cache.html  forgot-password.html  forgot-password.js  index.html  login.html  login.js  manifest.json  offline.html  profile.html  profile.js  reset-password.html  reset-password.js  setup.html  setup.js  shared-humidor.html  styles.css  sw.js
tests/: README.md  auth_tests.rs  cigar_tests.rs  favorites_tests.rs  humidor_sharing_tests.rs  integration_tests.rs  ownership_transfer_tests.rs  permission_tests.rs  quantity_tests.rs  security_isolation_tests.rs  security_tests.rs  wish_list_tests.rs
(+43 files in other folders)
