[package]
name = "humidor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9.2"
base64 = "0.22"
regex = "1.10"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
