[package]
name = "humidor"
version = "1.3.1"
edition = "2024"

[[bin]]
name = "humidor"
path = "src/main.rs"

[lib]
name = "humidor"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
# Web framework - Staying on 0.3.x until 0.4 stabilizes (requires hyper 1.x migration)
# See docs/DEPENDENCY_UPDATES_PLAN.md Phase 4 for upgrade plan
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
dotenvy = "0.15"
bcrypt = "0.15"
# JWT library - Staying on 9.x until Phase 3 migration (breaking changes in 10.x)
jsonwebtoken = "9.2"
base64 = "0.22"
regex = "1.10"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.24"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
rand = "0.8"
# Archive library - Staying on 0.6.x until Phase 3 migration (major API changes in 6.0)
zip = { version = "0.6", default-features = false, features = ["deflate"] }
futures = "0.3"
bytes = "1.0"
once_cell = "1.19"
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"

[profile.dev]
debug = 0  # Disable debug info to avoid PDB limit on Windows

[profile.test]
debug = 0  # Disable debug info for tests to avoid LNK1318 error
split-debuginfo = "off"
